Updates the author name on package.json
See also:

- https://docs.npmjs.com/files/package.json#people-fields-author-contributors
- https://docs.npmjs.com/getting-started/creating-node-modules

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/rhyneav/papercss.git"
   },
-  "author": "rhyneav",
+  "author": "Rhyne Vlaservich <rhyneav@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rhyneav/papercss/issues"
