initial Hugo conversion

--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "chai": "^4.1.2",
     "gulp-sass": "^3.1.0",
     "http-server": "^0.9.0",
+    "gulp-less": "3.3.2",
+    "gulp-plumber": "1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-watch-less": "1.0.1",
+    "hugo-bin": "^0.17.0",
     "install": "0.10.1",
     "jake": "^8.0.15",
     "jshint": "^2.9.4",
