--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node node_modules/gulp/bin/gulp.js",
-    "build": "node node_modules/gulp/bin/gulp.js build",
-    "test": "./tests/jake.sh loose=true capture=Firefox"
+    "build": "node node_modules/gulp/bin/gulp.js build"
   },
   "repository": {
     "type": "git",
