--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Another CSS framework",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/gulp/bin/gulp.js",
-    "build": "node node_modules/gulp/bin/gulp.js build"
+     "start": "node node_modules/gulp/bin/gulp.js",
+-    "build": "node node_modules/gulp/bin/gulp.js build",
+-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
