--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
      "start": "node node_modules/gulp/bin/gulp.js",
--    "build": "node node_modules/gulp/bin/gulp.js build",
--    "test": "echo \"Error: no test specified\" && exit 1"
+     "build": "node node_modules/gulp/bin/gulp.js build",
+     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
