--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js: "8.8.1"
 
 before_script:
+    - chmod +x ./tests/jake.sh
     - export DISPLAY=:99.0
     - npm install karma-firefox-launcher
 
