--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js: "8.8.1"
 
 before_script:
     - chmod +x ./tests/jake.sh
+    - chmod +x ./tests/build/scripts/run_jake.sh
     - export DISPLAY=:99.0
     - npm install karma-firefox-launcher
 
