--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "url": "https://github.com/rhyneav/papercss/issues"
   },
   "homepage": "https://github.com/rhyneav/papercss#readme",
-  "devDependencies": {
-    "browserify": "^14.1.0",
-    "chai": "^4.1.2",
+  "dependencies": {
     "gulp": "3.9.1",
     "gulp-clean-css": "3.9.0",
     "gulp-connect": "5.0.0",
@@ -29,6 +27,12 @@
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-watch-less": "1.0.1",
+    "less": "2.7.2",
+    "normalize.css": "7.0.0"
+  },
+  "devDependencies": {
+    "browserify": "^14.1.0",
+    "chai": "^4.1.2",
     "http-server": "^0.9.0",
     "install": "0.10.1",
     "jake": "^8.0.15",
@@ -41,10 +45,8 @@
     "karma-node-modules-middleware": "^1.0.1",
     "karma-quixote": "^1.0.0",
     "karma-requirejs": "^1.1.0",
-    "less": "2.7.2",
     "mocha": "^4.0.1",
     "nodemon": "^1.11.0",
-    "normalize.css": "7.0.0",
     "npm": "5.3.0",
     "object-merge": "^2.5.1",
     "os": "^0.1.1",
