--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node node_modules/gulp/bin/gulp.js",
     "build": "node node_modules/gulp/bin/gulp.js build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node node_modules/gulp/bin/gulp.js build"
+    "postinstall": "gulp build"
   },
   "repository": {
     "type": "git",
