--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ before_script:
     - chmod +x ./tests/build/scripts/run_jake.sh
     - export DISPLAY=:99.0
     - npm install karma-firefox-launcher
-    - node node_modules/gulp/bin/gulp.js build
+    - gulp build
 
 script: "./jake.sh loose=true capture=Firefox"
