Removed normalize and gulp-concat

--- a/package.json
+++ b/package.json
@@ -22,15 +22,12 @@
   "dependencies": {
     "gulp": "3.9.1",
     "gulp-clean-css": "3.9.0",
-    "gulp-concat": "^2.6.1",
     "gulp-connect": "5.0.0",
     "gulp-less": "3.3.2",
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-watch-less": "1.0.1",
-    "less": "2.7.2",
-    "normalize.css": "7.0.0",
-    "normalize.less": "^1.0.0"
+    "less": "2.7.2"
   },
   "devDependencies": {
     "browserify": "^14.1.0",
