--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papercss",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "The less formal CSS framework.",
   "main": "index.js",
   "scripts": {
@@ -23,11 +23,8 @@
     "gulp": "3.9.1",
     "gulp-clean-css": "3.9.0",
     "gulp-connect": "5.0.0",
-    "gulp-less": "3.3.2",
     "gulp-plumber": "1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-watch-less": "1.0.1",
-    "less": "2.7.2"
+    "gulp-rename": "1.2.2"
   },
   "devDependencies": {
     "browserify": "^14.1.0",
