--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo --source=documentation"
+command = "hugo --source=docs"
 
 [build.environment]
 HUGO_VERSION = "0.30"
