remove compiled css

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ npm-debug.log
 .DS_Store
 /public
 .vscode
+
+# Ignore compiled CSS
+/docs/static/assets/paper.css
+/docs/static/assets/paper.min.css
