--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-less": "3.3.2",
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-watch-less": "1.0.1",
     "http-server": "^0.9.0",
     "hugo-bin": "^0.17.0",
@@ -61,6 +62,9 @@
     "shelljs": "^0.7.6",
     "simplebuild-jshint": "^1.3.0",
     "simplebuild-karma": "^1.0.0",
+    "stylelint": "8.4.0",
+    "stylelint-config-standard": "18.0.0",
+    "stylelint-scss": "2.2.0",
     "webpack-dev-server": "2.7.1"
   }
 }
