--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-stylelint": "6.0.0",
     "gulp-watch-less": "1.0.1",
     "http-server": "^0.9.0",
     "hugo-bin": "^0.17.0",
