Added the html and css for the navbar

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   "devDependencies": {
     "browserify": "^14.1.0",
     "chai": "^4.1.2",
-    "http-server": "^0.9.0",
     "gulp-less": "3.3.2",
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-watch-less": "1.0.1",
+    "http-server": "^0.9.0",
     "hugo-bin": "^0.17.0",
     "install": "0.10.1",
     "jake": "^8.0.15",
@@ -50,7 +50,7 @@
     "karma-requirejs": "^1.1.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.11.0",
-    "npm": "5.3.0",
+    "npm": "^5.3.0",
     "object-merge": "^2.5.1",
     "os": "^0.1.1",
     "procfile": "^0.1.1",
