--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "stylelint-config-standard": "18.0.0",
     "stylelint-order": "0.8.0",
     "stylelint-scss": "2.2.0",
-    "webpack-dev-server": "2.7.1"
+    "webpack-dev-server": "^3.1.10"
   },
   "pre-commit": [
     "stylelint"
