--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "browserify": "^14.1.0",
     "chai": "^4.1.2",
-    "gulp-less": "3.3.2",
+    "gulp-less": "^4.0.1",
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^3.1.0",
