--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^3.9.3",
     "gulp-connect": "^5.6.1",
-    "gulp-plumber": "1.1.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.2",
     "optional": "^0.1.4"
   },
   "devDependencies": {
