--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "papercss",
   "version": "1.7.0",
   "description": "The less formal CSS framework.",
-  "main": "index.js",
+  "main": "dist/paper.css",
   "scripts": {
-    "start": "node node_modules/gulp/bin/gulp.js",
-    "build": "node node_modules/gulp/bin/gulp.js build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "gulp postinstall",
-    "stylelint": "node node_modules/stylelint/bin/stylelint.js 'src/**/*.scss'"
+    "build": "node ./build/build.js",
+    "hugo:build": "hugo -D --source=docs",
+    "hugo:serve": "hugo server --source=docs --disableFastRender",
+    "lint": "npm run stylelint",
+    "start": "npm run hugo:serve",
+    "stylelint": "stylelint 'src/**/*.scss'"
   },
   "repository": {
     "type": "git",
@@ -20,27 +21,13 @@
     "url": "https://github.com/papercss/papercss/issues"
   },
   "homepage": "https://www.getpapercss.com",
-  "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-clean-css": "3.9.0",
-    "gulp-connect": "^5.6.1",
-    "gulp-plumber": "1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "^3.1.0",
-    "optional": "^0.1.4"
-  },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "browserify": "^14.1.0",
     "chai": "^4.1.2",
-    "gulp-less": "^4.0.1",
-    "gulp-plumber": "1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-stylelint": "6.0.0",
-    "gulp-watch-less": "1.0.1",
+    "chalk": "^4.1.0",
+    "cssnano": "^4.1.10",
     "http-server": "^0.11.1",
-    "hugo-bin": "^0.37.0",
     "install": "0.10.1",
     "jake": "^8.0.15",
     "jshint": "^2.9.6",
@@ -57,11 +44,14 @@
     "npm": "^6.4.1",
     "object-merge": "^2.5.1",
     "os": "^0.1.1",
+    "postcss": "^7.0.32",
     "pre-commit": "^1.2.2",
     "procfile": "^0.1.1",
     "quixote": "^0.14.0",
     "request": "^2.83.0",
     "requirejs": "^2.3.5",
+    "rimraf": "^3.0.2",
+    "sass": "^1.26.10",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "simplebuild-jshint": "^1.3.0",
@@ -71,7 +61,8 @@
     "stylelint-config-standard": "18.0.0",
     "stylelint-order": "0.8.0",
     "stylelint-scss": "2.2.0",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "write": "^2.0.0"
   },
   "pre-commit": [
     "stylelint"
