Update .npmignore to ignore all build-tools and source-code files

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,15 @@
-/node_modules
-npm-debug.log
-index.html
-demo.css
-yarn.lock
-/img
+/.github
+/build
 /docs
+/img
+/node_modules
 /public
-/tests
+/src
+.browserslistrc
+.editorconfig
+.stylelintrc.json
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
+netlify.toml
+npm-debug.log
+yarn.lock
