--- a/package.json
+++ b/package.json
@@ -21,47 +21,21 @@
     "url": "https://github.com/papercss/papercss/issues"
   },
   "homepage": "https://www.getpapercss.com",
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "browserify": "^14.1.0",
     "chai": "^4.1.2",
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
-    "http-server": "^0.11.1",
-    "install": "0.10.1",
-    "jake": "^8.0.15",
-    "jshint": "^2.9.6",
-    "karma": "^3.1.1",
-    "karma-chai": "^0.1.0",
-    "karma-commonjs": "1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-node-modules-middleware": "^1.0.1",
-    "karma-quixote": "^1.0.0",
-    "karma-requirejs": "^1.1.0",
-    "mocha": "^4.0.1",
-    "nodemon": "^1.11.0",
-    "npm": "^6.4.1",
-    "object-merge": "^2.5.1",
-    "os": "^0.1.1",
     "postcss": "^7.0.32",
     "pre-commit": "^1.2.2",
-    "procfile": "^0.1.1",
-    "quixote": "^0.14.0",
-    "request": "^2.83.0",
-    "requirejs": "^2.3.5",
     "rimraf": "^3.0.2",
     "sass": "^1.26.10",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "simplebuild-jshint": "^1.3.0",
-    "simplebuild-karma": "^1.0.0",
     "stylelint": "8.4.0",
     "stylelint-config-sass-guidelines": "4.0.1",
     "stylelint-config-standard": "18.0.0",
     "stylelint-order": "0.8.0",
     "stylelint-scss": "2.2.0",
-    "webpack-dev-server": "^3.1.10",
     "write": "^2.0.0"
   },
   "pre-commit": [
