Re-add hugo-bin as a dev-dependency

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.1.2",
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
+    "hugo-bin": "^0.62.3",
     "postcss": "^7.0.32",
     "pre-commit": "^1.2.2",
     "rimraf": "^3.0.2",
