--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "The less formal CSS framework.",
   "main": "dist/paper.css",
   "scripts": {
-    "build": "node ./build/build.js",
+    "css:build": "node ./build/build.js",
     "hugo:build": "hugo -D --source=docs",
     "hugo:serve": "hugo server --source=docs --disableFastRender",
+    "build": "npm run css:build && npm run hugo:build",
     "lint": "npm run stylelint",
     "start": "npm run hugo:serve",
     "stylelint": "stylelint 'src/**/*.scss'"
