--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.26.10",
     "stylelint": "^13.7.2",
-    "stylelint-config-sass-guidelines": "4.0.1",
+    "stylelint-config-sass-guidelines": "^7.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.18.0",
